examples/test/testpolicy6308.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6308
  namespace: namespace349
spec:
  podSelector:
    matchLabels:
      key17: value22
      key11: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value11
          key42: value25
          key18: value44
      podSelector:
        matchLabels:
          key17: value32
          key30: value15
          key41: value5
